# IN4390-QEES

./: .gitignore  README.md
ANOVA Exercise/: ANOVA_1.ipynb  ANOVA_2.py
Customizable Project/Group26_Customizable_Project/: Readme.md
Customizable Project/Group26_Customizable_Project/Demos/: Afek_Gafani.tla
Customizable Project/Group26_Customizable_Project/Demos/Afek_Gafani.toolbox/: .project  Afek_Gafani___Model_1.launch  Afek_Gafani___Model_1_SnapShot_1610223671163.launch  Afek_Gafani___Model_1_SnapShot_1610223710667.launch  Afek_Gafani___Model_1_SnapShot_1610223791980.launch  Afek_Gafani___Model_1_SnapShot_1610225692028.launch  Afek_Gafani___Model_1_SnapShot_1610225819041.launch  Afek_Gafani___Model_1_SnapShot_1610225852389.launch  (+4 more)
Customizable Project/Group26_Customizable_Project/Group26_tool_survey_TLA+/: Group26_presentation.pptx  demo1.tla  demo2.tla  readme.txt
Customizable Project/Pre/: Presentaion_1.0.pptx  Presentaion_2.0.pptx  QEES_toolsurvey(1).docx  讲稿.docx
Lab 1/Group26_lab1/: readme.txt
Lab 1/Group26_lab1/Q2/: Q_2.py
Lab 1/Group26_lab1/Q3/: boxplotQ3.ipynb
Lab 1/Group26_lab1/Q4/: Q_4_2.py  Q_4_listener.bash  Q_4_talker.bash
Lab 1/Group26_lab1_optional/: readme.txt
Lab 1/Group26_lab1_optional/Q5/: Q5.ipynb  readme.txt
Lab 1/Group26_lab1_optional/Q6/: Q6.py
Lab 1/Group26_lab1_optional/Q7/: Q7.ipynb
Lab 1/Group26_lab1_optional/Q8/: Q_8.py
Lab 1/Group26_lab1_optional/Q8/chain_communication/: CMakeLists.txt  package.xml
Lab 1/Group26_lab1_optional/Q8/chain_communication/src/: listener_B.cpp  listener_C.cpp  listener_D.cpp  listener_E.cpp  talker_A.cpp
Lab 2/Group26_lab2_Optional/: Q5_2.cpn  Q5_2_mechanism.vsdx  Q_4.cpn
Lab 2/Group26_lab2_mandatory/: Q1.mlx
Lab 3/Group26_Lab3_Optional/: node.py  node_modified.py  try.py
Lab 3/lab3_material/: run2.bash
(+1506 files in other folders)
